--- a/Set Up Network and HTTP Load Balancers/GSP007.md
+++ b/Set Up Network and HTTP Load Balancers/GSP007.md
@@ -1,4 +1,10 @@
 # Set Up Network and HTTP Load Balancers || GSP007 ||
+# Follow the instructions
+
+# If you consider that the video helped you to complete your lab, so please do like and subscribe [Edutech Barsha](https://www.youtube.com/@edutechbarsha)
+## Solution [here](https://youtu.be/z9hU9hx1rXQ)
+
+### Run the following Commands in CloudShell
 ```
 export REGION=
 ```
@@ -117,3 +123,11 @@ gcloud compute forwarding-rules create http-content-rule \
    --target-http-proxy=http-lb-proxy \
    --ports=80
 ```
+### Congratulations 🎉 for completing the Lab !😄
+
+##### *You Have Successfully Demonstrated Your Skills And Determination.*
+
+#### *Well done!*
+
+# Thanks For Watching:)
+
