--- a/Deploy and Troubleshoot a Website: Challenge Lab/GSP101.md
+++ b/Deploy and Troubleshoot a Website: Challenge Lab/GSP101.md
@@ -1,4 +1,15 @@
+# Deploy and Troubleshoot a Website: Challenge Lab || [GSP101](https://www.cloudskillsboost.google/focuses/1734?parent=catalog) ||
+---
+### ⚠️ Disclaimer
+- **This script and guide are provided for  the educational purposes to help you understand the lab services and boost your career. Before using the script, please open and review it to familiarize yourself with Google Cloud services. Ensure that you follow 'Qwiklabs' terms of service and YouTube’s community guidelines. The goal is to enhance your learning experience, not to bypass it.**
+---
 
+# Follow the instructions
+
+# If you consider that the video helped you to complete your lab, so please do like and subscribe [Edutech Barsha](https://www.youtube.com/@edutechbarsha)
+## Solution [here](https://youtu.be/cnNb2XYOnDs)
+
+### Run the following Commands in CloudShell
 ```
 export INSTANCE_NAME=
 export ZONE=
@@ -6,3 +17,10 @@ gcloud compute firewall-rules create http-ingress --allow=tcp:80 --source-ranges
 gcloud compute instances create $INSTANCE_NAME --zone=$ZONE --machine-type=e2-medium --tags=http-server,https-server --image=projects/debian-cloud/global/images/debian-10-buster-v20220406 --metadata=startup-script=\#\!\ /bin/bash$'\n'apt-get\ update$'\n'apt-get\ install\ apache2\ -y$'\n'service\ --status-all$'\n'
 gcloud compute instances describe $INSTANCE_NAME --format='get(networkInterfaces[0].accessConfigs[0].natIP)'
 ```
+### Congratulations 🎉 for completing the Lab !😄
+
+##### *You Have Successfully Demonstrated Your Skills And Determination.*
+
+#### *Well done!*
+
+# Thanks For Watching:)
