--- a/Automatically Deploy Python Web Apps from Version Control to Cloud Run/GSP1204.md
+++ b/Automatically Deploy Python Web Apps from Version Control to Cloud Run/GSP1204.md
@@ -1,4 +1,4 @@
-# Automatically Deploy Python Web Apps from Version Control to Cloud Run | [GSP1204](https://www.cloudskillsboost.google/focuses/80415?parent=catalog)
+# Automatically Deploy Python Web Apps from Version Control to Cloud Run || [GSP1204](https://www.cloudskillsboost.google/focuses/80415?parent=catalog) ||
 
 ---
 ### ⚠️ Disclaimer
