--- a/Automatically Deploy Python Web Apps from Version Control to Cloud Run/GSP1204.md
+++ b/Automatically Deploy Python Web Apps from Version Control to Cloud Run/GSP1204.md
@@ -20,7 +20,7 @@ curl -LO raw.githubusercontent.com/quiccklabs/Labs_solutions/refs/heads/master/A
 sudo chmod +x task1.sh
 ./task1.sh
 ```
-- *This command downloads the setup script from GitHub. The script will help configure the environment and perform necessary setup steps*
+# - This command downloads the setup script from GitHub. The script will help configure the environment and perform necessary setup steps
 
 >[Now Follow the Video]
 
