--- a/Automatically Deploy Python Web Apps from Version Control to Cloud Run/GSP1204.md
+++ b/Automatically Deploy Python Web Apps from Version Control to Cloud Run/GSP1204.md
@@ -12,13 +12,10 @@
 
 ### Run the following Commands in CloudShell
 
-**Launch Cloud Shell:**
-Start your Google CloudShell session by [clicking here](https://console.cloud.google.com/home/dashboard?project=&pli=1&cloudshell=true).
-
 ```
-curl -LO raw.githubusercontent.com/quiccklabs/Labs_solutions/refs/heads/master/Automatically%20Deploy%20Python%20Web%20Apps%20from%20Version%20Control%20to%20Cloud%20Run/task1.sh
-sudo chmod +x task1.sh
-./task1.sh
+curl -LO raw.githubusercontent.com/Techbarsha/cloudlabs/refs/heads/main/Automatically%20Deploy%20Python%20Web%20Apps%20from%20Version%20Control%20to%20Cloud%20Run/labtask1.sh
+sudo chmod +x labtask1.sh
+./labtask1.sh
 ```
 ### This command downloads the setup script from GitHub. The script will help configure the environment and perform necessary setup steps
 
@@ -26,9 +23,9 @@ sudo chmod +x task1.sh
 
 
 ```
-curl -LO raw.githubusercontent.com/quiccklabs/Labs_solutions/refs/heads/master/Automatically%20Deploy%20Python%20Web%20Apps%20from%20Version%20Control%20to%20Cloud%20Run/task2.sh
-sudo chmod +x task2.sh
-./task2.sh
+curl -LO raw.githubusercontent.com/Techbarsha/cloudlabs/refs/heads/main/Automatically%20Deploy%20Python%20Web%20Apps%20from%20Version%20Control%20to%20Cloud%20Run/labtask2.sh
+sudo chmod +x labtask2.sh
+./labtask2.sh
 ```
 
 
