--- a/Automatically Deploy Python Web Apps from Version Control to Cloud Run/GSP1204.md
+++ b/Automatically Deploy Python Web Apps from Version Control to Cloud Run/GSP1204.md
@@ -8,7 +8,7 @@
 # Follow the instructions
 
 # If you consider that the video helped you to complete your lab, so please do like and subscribe [Edutech Barsha](https://www.youtube.com/@edutechbarsha)
-## Solution [here](https://youtu.be/Fg3N5NcWKuU)
+## Solution [here](https://youtu.be/B8Kt5qb0_Xs)
 
 ### Run the following Commands in CloudShell
 
