--- a/Looker Data Explorer - Qwik Start/GSP718.md
+++ b/Looker Data Explorer - Qwik Start/GSP718.md
@@ -1,3 +1,13 @@
+# Looker Data Explorer - Qwik Start || [GSP101](https://www.cloudskillsboost.google/focuses/16552?parent=catalog) ||
+---
+### ⚠️ Disclaimer
+- **This script and guide are provided for  the educational purposes to help you understand the lab services and boost your career. Before using the script, please open and review it to familiarize yourself with Google Cloud services. Ensure that you follow 'Qwiklabs' terms of service and YouTube’s community guidelines. The goal is to enhance your learning experience, not to bypass it.**
+---
+
+# Follow the instructions
+
+# If you consider that the video helped you to complete your lab, so please do like and subscribe [Edutech Barsha](https://www.youtube.com/@edutechbarsha)
+## Solution [here](https://youtu.be/Fg3N5NcWKuU)
 ```
 
 
@@ -18,3 +28,10 @@ explore: +airports {
     }
   }
 ```
+### Congratulations 🎉 for completing the Lab !😄
+
+##### *You Have Successfully Demonstrated Your Skills And Determination.*
+
+#### *Well done!*
+
+# Thanks For Watching:)
