--- a/Looker Data Explorer - Qwik Start/GSP718.md
+++ b/Looker Data Explorer - Qwik Start/GSP718.md
@@ -22,7 +22,7 @@ explore: +airports {
     }
   }
 ```
--  *Follow the instructions*
+-  *Follow the video instructions*
 
 ### Congratulations 🎉 for completing the Lab !😄
 
