--- a/Looker Data Explorer - Qwik Start/GSP718.md
+++ b/Looker Data Explorer - Qwik Start/GSP718.md
@@ -7,7 +7,7 @@
 
 # Place in `faa` model
 explore: +airports {
-    query: quicklab_task_1 {
+    query: edutechbarsha_task_1 {
       measures: [average_elevation]
     }
   }
@@ -16,7 +16,7 @@ explore: +airports {
 
 # Place in `faa` model
 explore: +airports {
-    query: quicklab_task_2 {
+    query: edutechbarsha_task_2 {
       dimensions: [facility_type]
       measures: [average_elevation, count]
     }
