--- a/Looker Data Explorer - Qwik Start/GSP718.md
+++ b/Looker Data Explorer - Qwik Start/GSP718.md
@@ -1,7 +1,7 @@
 # Looker Data Explorer - Qwik Start || [GSP718](https://www.cloudskillsboost.google/focuses/16552?parent=catalog) ||
 
 # If you consider that the video helped you to complete your lab, so please do like and subscribe [Edutech Barsha](https://www.youtube.com/@edutechbarsha)
-## Solution [here](https://youtu.be/Fg3N5NcWKuU)
+## Solution [here](https://youtu.be/pQv1Q08-_Fs)
 ```
 
 
