--- a/ETL Processing on Google Cloud Using Dataflow and BigQuery (Python)/GSP290.md
+++ b/ETL Processing on Google Cloud Using Dataflow and BigQuery (Python)/GSP290.md
@@ -4,9 +4,11 @@ ETL Processing on Google Cloud Using Dataflow and BigQuery (Python) || GSP290 ||
 ## Solution [here](https://youtu.be/T5vr5fS1awg)
 
 ### Run the following Commands in CloudShell
+- *COMMAND1*
 ```
 export REGION=
 ```
+- *COMMAND2*
 ```
 gcloud services disable dataflow.googleapis.com
 gcloud services enable dataflow.googleapis.com
@@ -27,12 +29,13 @@ bq mk lake
 
 docker run -it -e PROJECT=$PROJECT -v $(pwd)/dataflow-python-examples:/dataflow python:3.7 /bin/bash
 ```
-
+- *COMMAND3*
 ```
 pip install apache-beam[gcp]==2.24.0
 
 cd dataflow/
 ```
+- *COMMAND4*
 ```
 python dataflow_python_examples/data_ingestion.py \
   --project=$PROJECT --region=$REGION \
