--- a/Create a Streaming Data Lake on Cloud Storage: Challenge Lab/ARC110.md
+++ b/Create a Streaming Data Lake on Cloud Storage: Challenge Lab/ARC110.md
@@ -4,39 +4,37 @@
 ## Solution [here](https://youtu.be/T5vr5fS1awg)
 
 ### Run the following Commands in CloudShell
-- *COMMAND1*
+
 ```
-export BUCKET_NAME=
+
+
+PROJECT_ID=$(gcloud config get-value project)
+
+export BUCKET_NAME="${PROJECT_ID}-bucket"
+
 export TOPIC_ID=
-export PROJECT_ID=
-```
-- *COMMAND2*
-```
-gcloud config set compute/region "REGION"
+
+export REGION=
+
+export MESSAGE=""
 
 gcloud services disable dataflow.googleapis.com
 
 gcloud services enable dataflow.googleapis.com
 
-PROJECT_ID=$(gcloud config get-value project)
-REGION=us-central1
-AE_REGION=us-central
-
-
 gsutil mb gs://$BUCKET_NAME
 
 gcloud pubsub topics create $TOPIC_ID
 
-gcloud app create --region=$AE_REGION
-```
-- *COMMAND3*
-```
-gcloud scheduler jobs create pubsub publisher-job --schedule="* * * * *" \
-    --topic=$TOPIC_ID --message-body=
-```
-- *COMMAND4*
-```
-gcloud scheduler jobs run publisher-job
+gcloud app create --region=$REGION
+
+sleep 100
+
+gcloud scheduler jobs create pubsub quicklab --schedule="* * * * *" \
+    --topic=$TOPIC_ID --message-body="$MESSAGE"
+
+
+gcloud scheduler jobs run quicklab
 
 git clone https://github.com/GoogleCloudPlatform/java-docs-samples.git
 cd java-docs-samples/pubsub/streaming-analytics
