--- a/Create a Streaming Data Lake on Cloud Storage: Challenge Lab/ARC110.md
+++ b/Create a Streaming Data Lake on Cloud Storage: Challenge Lab/ARC110.md
@@ -30,11 +30,11 @@ gcloud app create --region=$REGION
 
 sleep 100
 
-gcloud scheduler jobs create pubsub quicklab --schedule="* * * * *" \
+gcloud scheduler jobs create pubsub edutech --schedule="* * * * *" \
     --topic=$TOPIC_ID --message-body="$MESSAGE"
 
 
-gcloud scheduler jobs run quicklab
+gcloud scheduler jobs run edutech
 
 git clone https://github.com/GoogleCloudPlatform/java-docs-samples.git
 cd java-docs-samples/pubsub/streaming-analytics
