--- a/Protecting Sensitive Data in Gen AI Model Responses/deidentify-model-response-v1.0.0.ipynb
+++ b/Protecting Sensitive Data in Gen AI Model Responses/deidentify-model-response-v1.0.0.ipynb
@@ -275,15 +275,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please like share & subscribe to Techcps https://www.youtube.com/@techcps\n"
+      "Please like share & subscribe to EdutechBarsha https://www.youtube.com/@edutechbarsha\n"
      ]
     }
    ],
    "source": [
-    "# Please like share & subscribe to Techcps\n",
-    "# YouTube https://www.youtube.com/@techcps\n",
+    "# Please like share & subscribe to EdutechBarsha\n",
+    "# YouTube https://www.youtube.com/@edutechbarsha\n",
     "\n",
-    "print(\"Please like share & subscribe to Techcps https://www.youtube.com/@techcps\")"
+    "print(\"Please like share & subscribe to EdutechBarsha https://www.youtube.com/@edutechbarsha\")"
    ]
   },
   {
