--- a/Explore Generative AI with the Gemini API in Vertex AI Challenge Lab/gemini-explorer-challenge-v1.0.0.ipynb
+++ b/Explore Generative AI with the Gemini API in Vertex AI Challenge Lab/gemini-explorer-challenge-v1.0.0.ipynb
@@ -100,8 +100,8 @@
    "outputs": [],
    "source": [
     "# Define project information\n",
-    "PROJECT_ID = \"qwiklabs-gcp-00-4095e3ae7e54\"  # @param {type:\"string\"}\n",
-    "LOCATION = \"us-east1\"  # @param {type:\"string\"}\n",
+    "PROJECT_ID = \"qwiklabs-gcp-00-4065e6ae7e54\"  # @param {type:\"string\"}\n",
+    "LOCATION = \"us-west1\"  # @param {type:\"string\"}\n",
     "\n",
     "# Initialize Vertex AI\n",
     "import vertexai\n",
